# titans

./: README.md  pyproject.toml  titans_pipe
logger/: __init__.py  logger_config.py
templates/: index.html
tests/: test_titans.py
titans/: asgi.py  game.py  settings.py  urls.py  views.py  wsgi.py
