[tool.poetry]
name = "titans"
version = "0.1.0"
description = ""
authors = ["RuebenAntony <rueben@antony.tv>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pytest-watch = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
