[tool.poetry]
name = "titans"
version = "0.1.0"
description = ""
authors = ["RuebenAntony <rueben@antony.tv>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-watch = "^4.2.0"
reloady = "^0.1.7"
django = "^5.1.2"
django-htmx = "^1.21.0"
django-livereload-server = "^0.5.1"
daphne = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
